examples/pos/swap.effekt
def swap(x: Int, y: Int): Tuple2[Int, Int] / {} = (y, x)