examples/neg/namer/issue281/too_many_type_args.effekt
interface Eff[A] {
  def use(): A
}

def foo(): Int / Eff[Int, String] = 42 // ERROR Wrong number of type arguments

def main() = ()
